e2e/tests/all/snapshots/menu_rest_desktop.snap
---
source: e2e/src/suite.rs
description: menu at desktop (rest)
expression: tree
---
generic
  button "Actions" [expanded=false] [haspopup=menu]
    StaticText "Actions"
    generic
