e2e/tests/all/snapshots/menu_rest_mobile.snap
---
source: e2e/src/suite.rs
description: menu at mobile (rest)
expression: tree
---
generic
  button "Actions" [expanded=false] [haspopup=menu]
    StaticText "Actions"
    generic
