e2e/tests/all/snapshots/menubar_rest_desktop.snap
---
source: e2e/src/suite.rs
description: menubar at desktop (rest)
expression: tree
---
menubar "Editor" [orientation=horizontal]
  menuitem "File" [expanded=false] [haspopup=menu]
    StaticText "File"
  menuitem "Edit" [expanded=false] [haspopup=menu]
    StaticText "Edit"
  menuitem "View" [expanded=false] [haspopup=menu]
    StaticText "View"
