e2e/tests/all/snapshots/modal_open_desktop.snap
---
source: e2e/src/suite.rs
description: modal at desktop (open)
expression: tree
---
button "Close editor"
  StaticText "Close editor"
generic
  generic
    generic
    generic
      dialog "Unsaved changes" [modal]
        heading "Unsaved changes" [level=2]
          StaticText "Unsaved changes"
        button "Close"
        paragraph
          StaticText "notes.md has changes you have not saved."
        button "Keep editing"
          StaticText "Keep editing"
          generic
        button "Discard"
          StaticText "Discard"
          generic
